# yew-todo-app

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html
apps/server/: Cargo.toml  database.db
apps/server/migrations/2024-01-15-170549_create_tasks/: up.sql
apps/server/src/: lib.rs  main.rs  models.rs  schema.rs  tasks.rs  tasks_domain.rs
apps/server/src/model/: task.rs
apps/server/src/utils/: load_demo.rs  mod.rs
apps/ui/: Cargo.toml  index.scss
apps/ui/src/: app.rs  lib.rs  store.rs
apps/ui/src/components/: create_task.rs  mod.rs  task.rs  tasks.rs
apps/ui/src/services/: tasks_service.rs
src/: app.rs
src/components/: task.rs
