[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
chrono = { version = "0.4.31", features = ["serde"] }
nanoid = "0.4.0"
serde = { version = "1", features = ["derive"] }
