[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["sqlite", "chrono",  "r2d2", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
nanoid = "0.4.0"
serde = { version = "1", features = ["derive"] }
types = { path = "../../packages/types" }
