[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "Yew TODO app"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
types = { path = "../../packages/types" }
wasm-bindgen-futures = "0.4"
yew = { version="0.21", features=["csr"] }